# waypoint_navigation_plugin

./: README.md
quadrotor_path/: CMakeLists.txt  README.md  package.xml
quadrotor_path/launch/: dragonfly8.launch  quadrotor_path.launch  race1.launch  voxl1.launch
quadrotor_path/src/: Catalog of Tx2 Problemstxt.txt  Catalog of Tx2 Problemstxt.txt.bak  Stairs_waypoint.txt  Stairs_waypoint.txt.bak  quadrotor_path.cpp  quadrotor_path.cpp.bak
src/: waypoint_nav_frame.cpp  waypoint_nav_frame.h
ui/: WaypointNavigation.ui
waypoint_nav_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
waypoint_nav_plugin/rviz/: waypoint_tool.rviz
waypoint_nav_plugin/src/: waypoint_nav_frame.cpp  waypoint_nav_frame.hpp  waypoint_nav_tool.cpp  waypoint_nav_tool.hpp
waypoint_nav_plugin/ui/: WaypointNavigation.ui
waypoint_navigation_plugin/: CMakeLists.txt  package.xml  plugin_description.xml  point_navigation.rviz  waypoint_nav_plugin_description.xml
waypoint_navigation_plugin/cfg/: waypoint_plugin_parameters.cfg
waypoint_navigation_plugin/cmake/: ROS1.cmake  ROS2.cmake
waypoint_navigation_plugin/launch/: dragonfly8.rviz  voxblox.rviz  waypoint_navigation_plugin.rviz
waypoint_navigation_plugin/rviz/: waypoint_tool_ros2.rviz
waypoint_navigation_plugin/src/: hri_nav_frame.cpp  hri_nav_frame.h  hri_nav_frame_ros2.cpp  hri_nav_frame_ros2.hpp  hri_nav_tool_ros2.cpp  hri_nav_tool_ros2.hpp  waypoint_nav_frame.cpp  waypoint_nav_frame.cpp.bak  waypoint_nav_frame.h  waypoint_nav_frame.h.bak  waypoint_nav_frame_ros1.cpp  waypoint_nav_frame_ros1.h  waypoint_nav_frame_ros2.cpp  waypoint_nav_frame_ros2.hpp  waypoint_nav_tool.cpp  waypoint_nav_tool.h  waypoint_nav_tool_ros1.cpp  waypoint_nav_tool_ros1.h  waypoint_nav_tool_ros2.cpp  waypoint_nav_tool_ros2.hpp
waypoint_navigation_plugin/ui/: HRI_coworker.ui  WaypointNavigation.ui
