<package format="2">
  <name>waypoint_navigation_plugin</name>
  <version>0.1.0</version>
  <description>
     Tool for planting waypoints in rviz.
  </description>
  <maintainer email="tdineshd@gmail.com">Dinesh Thakur</maintainer>
  <license>BSD</license>

  <author>Dinesh Thakur</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>rviz</depend>
  <depend>mav_manager</depend>
  <depend>rosbag</depend>
  <depend>std_srvs</depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

</package>
